--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
             
-    background-image: url('https://c2.im5i.com/2023/01/22/YHdz1.jpeg');
+    background-image: url('https://c2.im5i.com/2023/01/22/YHyi7.jpeg');
     background-size: cover;
     width: 100%;
     height: 100%;
